package ru.smurtazin.models;

public interface Procedure {
	
	// Теоретически тут должнобыть всё что угодно
	// и печатание и выдача строки 
	// Неуверен что исполнение sql запроса
}