package ru.smurtazin.models;

import ru.smurtazin.models.*;

public interface Action {
	String actionName;
	Procedures[] procedures[];
}