@startuml

note "Приложение должно осуществлять следующие действия.\n\t-Добавление новой заявки\n\t-Редактирования заявки.\n\t-Удаления заявки.\n\t-Отображение списка всех заявок.\n\t-Отображения заявок с условием ильтра.\n\t-Добавлять к заявки комментарий." as N1

note "Procedure имеет имя показанное в Menu" as N3

note "Procedure - к примеру 'Добавить новую запись'\nимеет действия (Actions) - к примеру 'Insert into DB table',\n'Asc what to insert' " as N4


package "models" {
	' extends Item '
	Bug -|> Item 

	' extends Item '
	Task -|> Item 

	interface Action
	interface MenuItem
	MenuItem <|-- Action
	Action <|-- Procedure
}


' --- Classes Description ---
class Task {
	+ Task(String name, String desc)
	+ String calculatePrice()
}
class Bug

class Item {
	+ String name;
	+ String description;
	+ long creationDate;
	+ commentsList;

	+ Item() 
	+ Item(String name, String description, long create) 

	+ String getName() 
	+ String getDescription() 
	+ long getCreationDate()
}

interface Procedure {
	String name;
	Action[] actions[];
}

' note top of WorkingWithMenu() : "Item <- Task <-> Request" as N2
' note "Item <- Task <-> Request" as N2


' -- Package start
package "start" {
	Tracker -|> Item

	class WorkingWithMenu
}

interface MenuItem {
	String itemName;
}

interface Action {
	String actionName;
	Procedure[] procedures[];
}

note top of Procedure : "Теоретически тут должно быть\nвсё что угодно и печатание\nи выдача строки.\nНеуверен что исполнение sql запроса" as N2
interface Procedure {
		
}

class WorkingWithMenu {
	menu_Running()

	+ addNewRequest();
	+ editRequest();
	+ deleteRequest();
	+ showRequestList();
	+ showRequestListFiltered(String filterRegExp);
	+ addCommentToRequest();
}

class Tracker {
	+ Item[] items = new Item[3]
	+ static void main(String[] args)		
}


@enduml